# imap4spec

./: Cargo.toml  README.md
.github/workflows/: workspace.yml
clients/yaws-client-imap4/: Cargo.toml  README.md
clients/yaws-client-imap4/src/: lib.rs  tcp.rs  tls.rs
clients/yaws-client-imap4/src/tcp/: lunatic.rs  tokio_uring.rs
clients/yaws-client-imap4/src/tls/: rustls_codec.rs  rustls_io_uring.rs  rustls_nocert_verifier.rs
protos/yaws-proto-imap4/: Cargo.toml  README.md
protos/yaws-proto-imap4/src/: capabilities.rs  context.rs  lib.rs  request_response.rs  state.rs  traits.rs
protos/yaws-proto-imap4/src/request_response/: not_authenticated.rs  universal.rs
protos/yaws-proto-imap4/src/request_response/not_authenticated/: authenticate.rs  login.rs  starttls.rs
protos/yaws-proto-imap4/src/request_response/universal/: capability.rs  logout.rs  noop.rs
protos/yaws-proto-imap4/transcripts/: rfc3501.txt  rfc9051.txt
runners/yaws-runner-client-imap4-tokio_uring/: Cargo.toml
runners/yaws-runner-client-imap4-tokio_uring/src/: main.rs
