[package]
name = "yaws-client-imap4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaws-proto-imap4 = { version = "0.1", path = "../../protos/yaws-proto-imap4" }
tokio-uring = { version = "0.4" }

[features]
