[package]
name = "yaws-proto-imap4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = { version = "0.14", default-features = false, features = ["export_derive"] }

[features]
default = []

# By default state machine allows from rfc state
# Below features adds pre-states e.g. from incomplete protocol captures

imap4rev2_state_preauthenticated = []
imap4rev2_state_preselected = []
imap4rev2_state_prelogout = []
imap4rev2_state_preidle = []

imap4rev2_state_preall = ["imap4rev2_state_preauthenticated", "imap4rev2_state_preselected", "imap4rev2_state_prelogout", "imap4rev2_state_preidle"]
